# resumix

./: .gitignore  Dockerfile  README.md  create_example_resume_pdf.py  docker-compose.yml  example_resume.md  pyproject.toml  pytest.ini  restart.sh  start.sh  status.sh  stop.sh
resumix/: .gitignore  main.py  main_test.py  packages.txt  server.py  test.py  test_deepseek.py
resumix/backend/controller/: agent_controller.py  compare_controller.py  score_controller.py
resumix/backend/job_parser/: jd_parser.py  resume_parser.py  resume_rewriter.py
resumix/backend/module/: score_module.py  test_score_module.py
resumix/backend/prompt/: prompt_dispatcher.py  prompt_templates.py
resumix/backend/resume_generator/: doc_utils.py  generator.py  resume_generator.py
resumix/backend/retriever/: build_index.py  knowledge_retriever.py
resumix/backend/rewriter/: keyword_controller.py  keyword_extractor.py  resume_rewriter.py
resumix/backend/score_module/: test_score_module.py
resumix/backend/section_parser/: base_parser.py  jd_vector_parser.py  test_parser.py  vector_parser.py
resumix/backend/service/: __init__.py  agent_service.py  compare_service.py  fast_matching_service.py  job_embedding_store.py  resume_embedding_store.py  score_service.py  test_faiss_implementation.py
resumix/backend/tool/: agent.py
resumix/components/: agent_module.py  analysis_module.py  compare_module.py  polish_module.py  score_module.py  score_page.py  ui_integration.py
resumix/config/: config.yaml  llm_config.py
resumix/data/: data.json  index.json
resumix/job_parser/: jd_parser.py  resume_parser.py
resumix/prompt/: __init__.py  prompt_dispatcher.py  prompt_templates.py
resumix/rewriter/: __init__.py  keyword_controller.py  keyword_extractor.py  resume_rewriter.py
resumix/section/: education_section.py  experience_section.py  info_section.py  projects_section.py  skills_section.py
resumix/section_parser/: base_parser.py  jd_vector_parser.py  test_parser.py  vector_parser.py
resumix/styles/: __init__.py
resumix/tool/: __init__.py  agent.py
resumix/tools/: agent.py  jd_parser_tool.py  jd_parser_tool_test.py  resume_parser_tool.py  tool.py
resumix/utils/: json_parser.py  llm_client.py  ocr_utils.py  sentence_transformer_utils.py  session_utils.py  timeit.py  url_fetcher.py
tests/: conftest.py  test_config.yaml
tests/fixtures/: resume_factory.py
(+67 files in other folders)
